[package]
name = "csgo-gsi"
version = "0.5.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"
description = "rust library for CS:GO's Game State Integration API"
documentation = "https://docs.rs/csgo-gsi"
readme = "README.md"
homepage = "https://sr.ht/~boringcactus/csgo-gsi/"
repository = "https://git.sr.ht/~boringcactus/csgo-gsi"
license-file = "LICENSE"
keywords = ["csgo", "valve"]
categories = ["api-bindings"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
fehler = "1.0.0"
vdf-serde = { version = "0.3.0" }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
rhai = { version = "0.18.3", optional = true }
futures = "0.3.30"
log = "0.4.20"
warp = "0.3"

[dev-dependencies]
version-sync = "0.9.1"

[[example]]
name = "rhai"
required-features = ["rhai"]
